--- a/templates/web/whatsapp-support.html
+++ b/templates/web/whatsapp-support.html
@@ -4,6 +4,7 @@
 
 <div class="main-panel " id="demo">
   <div class="content-wrapper" id="demo2">
+    {% comment%}
     <table class="table table-secondary">
       <thead>
         <tr>
@@ -20,6 +21,16 @@
         {% endfor %}
       </tbody>
     </table>
+    {% endcomment %}
+
+    <div class="row">
+      <h4 style="text-align: center;">Connect with WhatsApp to get this support</h4>
+      <div class="col-lg-12 col-12 text-center mt-3">
+        <a href="https://wa.me/917306502050?text=Hi%2C%0AUSK%20LOGIN%20Brand%20image%20design%20details" target="_blank"
+          rel="noopener noreferrer" class="WHATS-APP-NOW">WHATS APP NOW</a>
+      </div>
+    </div>
+
   </div>
 </div>
 
