--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -100,6 +100,8 @@
                                     </a>
                                 </div>
                             </div>
+
+                            {% comment %}
                             {% if subscription_validity.is_active %}
                             <div class="col-lg-12 col-md-12 col-sm-6 col-6">
                                 <div class="d-flex justify-content-between align-items-center experience">
@@ -135,6 +137,7 @@
                                 </div>
                             </div>
                             {% endif %}
+                            {% endcomment %}
                         </div>
                     </div>
                 </div>
