--- a/templates/web/invoice-searching.html
+++ b/templates/web/invoice-searching.html
@@ -4,16 +4,13 @@
 
 {% block content %}
 
-<<<<<<< HEAD
-=======
 <style>
-    @media print{
-        nav{
+    @media print {
+        nav {
             display: none;
         }
     }
 </style>
->>>>>>> 57499aa069832df16ec9462e4c4a3c67908c7236
 
 
 <!-- partial -->
@@ -33,12 +30,7 @@
                 </button>
             </form>
         </div>
-<<<<<<< HEAD
 
-        {% if status %}
-=======
-        
->>>>>>> 57499aa069832df16ec9462e4c4a3c67908c7236
         <div class="tm_container_invoice mt-5 mx-4">
             <div class="tm_invoice_wrap">
                 <div class="tm_invoice tm_style1 tm_type1" id="tm_download_section">
@@ -49,7 +41,8 @@
                                     {% if request.user.profile_image %}
                                     <img src="{{request.user.profile_image.crop.105x80}}" alt="Logo">
                                     {% else %}
-                                    <img class="rounded-circle mt-5" width="100px" src="{% static 'web/images/deafult-01.jpg' %}">
+                                    <img class="rounded-circle mt-5" width="100px"
+                                        src="{% static 'web/images/deafult-01.jpg' %}">
                                     {% endif %}
                                 </div>
                             </div>
@@ -107,11 +100,7 @@
                                         </thead>
                                         <tbody>
 
-<<<<<<< HEAD
-                                            {% for item in invoice_item %}
-=======
-                                           
->>>>>>> 57499aa069832df16ec9462e4c4a3c67908c7236
+
                                             <tr>
                                                 <td class="tm_width_3">{{ item.services_name }}</td>
                                                 <td class="tm_width_3">{{item.username}}</td>
@@ -120,11 +109,7 @@
                                                 <td class="tm_width_1">{{item.qty}}</td>
                                                 <td class="tm_width_2 tm_text_right">&#8377;{{item.sub_total}}</td>
                                             </tr>
-<<<<<<< HEAD
-                                            {% endfor %}
-=======
-                                            
->>>>>>> 57499aa069832df16ec9462e4c4a3c67908c7236
+
                                         </tbody>
                                     </table>
                                 </div>
@@ -165,16 +150,13 @@
                         <div class="tm_note tm_text_center tm_font_style_normal">
                             <hr class="tm_mb15">
                             <p class="tm_mb2"><b class="tm_primary_color">Terms & Conditions:</b></p>
-                            <p class="tm_m0">Please note :- You are responsible to safe the bill from lost and misuse by others</p>
+                            <p class="tm_m0">Please note :- You are responsible to safe the bill from lost and misuse by
+                                others</p>
                         </div><!-- .tm_note -->
                     </div>
                 </div>
                 <div class="tm_invoice_btns tm_hide_print">
-<<<<<<< HEAD
-                    <a href="{% url 'web:invoice_search_print' invoice.pk %}" class="tm_invoice_btn tm_color1">
-=======
                     <a href="" class="tm_invoice_btn tm_color1">
->>>>>>> 57499aa069832df16ec9462e4c4a3c67908c7236
                         <span class="tm_btn_icon">
                             <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                                 <path
@@ -203,11 +185,7 @@
                 </div>
             </div>
         </div>
-<<<<<<< HEAD
-        {% endif %}
-=======
-       
->>>>>>> 57499aa069832df16ec9462e4c4a3c67908c7236
+
     </div>
 </div>
 
