--- a/templates/web/payment.html
+++ b/templates/web/payment.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="row">
-
+        <script>
+            alert("Please enter valid phone number and email-id that registered on Card,UPI / QR,Netbanking & More ")
+        </script>
         <script>
             var options = {
                 "key": "{{RAZOR_PAY_KEY}}",
