--- a/templates/web/invoice-searching.html
+++ b/templates/web/invoice-searching.html
@@ -31,6 +31,7 @@
             </form>
         </div>
 
+        {% if status %}
         <div class="tm_container_invoice mt-5 mx-4">
             <div class="tm_invoice_wrap">
                 <div class="tm_invoice tm_style1 tm_type1" id="tm_download_section">
@@ -100,7 +101,7 @@
                                         </thead>
                                         <tbody>
 
-
+                                            {% for item in invoice_item %}
                                             <tr>
                                                 <td class="tm_width_3">{{ item.services_name }}</td>
                                                 <td class="tm_width_3">{{item.username}}</td>
@@ -109,6 +110,7 @@
                                                 <td class="tm_width_1">{{item.qty}}</td>
                                                 <td class="tm_width_2 tm_text_right">&#8377;{{item.sub_total}}</td>
                                             </tr>
+                                            {% endfor %}
 
                                         </tbody>
                                     </table>
@@ -156,7 +158,7 @@
                     </div>
                 </div>
                 <div class="tm_invoice_btns tm_hide_print">
-                    <a href="" class="tm_invoice_btn tm_color1">
+                    <a href="{% url 'web:invoice_search_print' invoice.pk %}" class="tm_invoice_btn tm_color1">
                         <span class="tm_btn_icon">
                             <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                                 <path
@@ -185,6 +187,7 @@
                 </div>
             </div>
         </div>
+        {% endif %}
 
     </div>
 </div>
