--- a/templates/web/invoice-search-print.html
+++ b/templates/web/invoice-search-print.html
@@ -136,6 +136,8 @@
                         <hr class="tm_mb15">
                         <p class="tm_mb2"><b class="tm_primary_color">Terms & Conditions:</b></p>
                         <p class="tm_m0">Please note :- You are responsible to safe the bill from lost and misuse by others</p>
+                        <p class="tm_m0">This is computer generated invoice no signature required.</p>
+                        
                     </div><!-- .tm_note -->
                 </div>
             </div>
