--- a/templates/web/invoice-searching.html
+++ b/templates/web/invoice-searching.html
@@ -154,6 +154,8 @@
                             <p class="tm_mb2"><b class="tm_primary_color">Terms & Conditions:</b></p>
                             <p class="tm_m0">Please note :- You are responsible to safe the bill from lost and misuse by
                                 others</p>
+                        <p class="tm_m0">This is computer generated invoice no signature required.</p>
+
                         </div><!-- .tm_note -->
                     </div>
                 </div>
