--- a/templates/invoice/general_3.html
+++ b/templates/invoice/general_3.html
@@ -23,7 +23,7 @@
                     <div class="tm_invoice_head tm_top_head tm_mb15 tm_align_center">
                         <div class="tm_invoice_left">
                             {% if request.user.profile_image %}
-                            <div class="tm_logo"><img src="{{request.user.profile_image.crop.250x250}}" alt="Logo"></div>
+                            <div class="tm_logo"><img src="{{request.user.profile_image.crop.500x500}}" alt="Logo"></div>
                             {% else %}
                             <img class="rounded-circle mt-5" width="100px" src="{% static 'web/images/deafult-01.jpg' %}">
                             {% endif %}
@@ -68,14 +68,17 @@
                     <div class="tm_table tm_style1">
                         <div class="">
                             <div class="tm_table_responsive">
+                                {% comment %}
                                 <table>
                                     <thead>
                                         <tr class="tm_accent_bg">
-                                            <th class="tm_width_3 tm_semi_bold tm_white_color">Item</th>
-                                            <th class="tm_width_4 tm_semi_bold tm_white_color">Username</th>
-                                            <th class="tm_width_4 tm_semi_bold tm_white_color">Password</th>
-                                            <th class="tm_width_2 tm_semi_bold tm_white_color">Price</th>
-                                            <th class="tm_width_1 tm_semi_bold tm_white_color">Qty</th>
+                                            <th class="tm_width_1 tm_semi_bold tm_white_color">No</th>
+                                            <th class="tm_width_3 tm_semi_bold tm_white_color">Particulars</th>
+                                            <th class="tm_width_3 tm_semi_bold tm_white_color">Username</th>
+                                            <th class="tm_width_3 tm_semi_bold tm_white_color">Password</th>
+                                            <th class="tm_width_4 tm_semi_bold tm_white_color">Description</th>
+                                            <th class="tm_width_2 tm_semi_bold tm_white_color">Fees</th>
+                                            <th class="tm_width_4 tm_semi_bold tm_white_color">Service Charge</th>
                                             <th class="tm_width_2 tm_semi_bold tm_white_color tm_text_right">Total</th>
                                         </tr>
                                     </thead>
@@ -83,11 +86,14 @@
 
                                         {% for item in invoice.get_invoiceitem %}
                                         <tr>
+                                            
+                                            <td class="tm_width_1">{{forloop.counter}}</td>
                                             <td class="tm_width_3">{{item.services_name}}</td>
                                             <td class="tm_width_3">{{item.username}}</td>
                                             <td class="tm_width_3">{{item.password}}</td>
-                                            <td class="tm_width_2">&#8377;{{item.services_charge}}</td>
-                                            <td class="tm_width_1">{{item.qty}}</td>
+                                            <td class="tm_width_4">{{item.descripton}}</td>
+                                            <td class="tm_width_1">{{item.fees}}</td>
+                                            <td class="tm_width_4">&#8377;{{item.services_charge}}</td>
                                             <td class="tm_width_2 tm_text_right">&#8377;{{item.sub_total}}</td>
                                         </tr>
 
@@ -95,6 +101,38 @@
                                         
                                     </tbody>
                                 </table>
+                                {% endcomment %}
+
+                                <table class="table">
+                                    <thead>
+                                      <tr style="background-color: #1b2559;color: #fff;">
+                                            <th>No</th>
+                                            <th>Particulars</th>
+                                            <th>Username</th>
+                                            <th>Password</th>
+                                            <th>Description</th>
+                                            <th>Fees</th>
+                                            <th>Service Charge</th>
+                                            <th>Total</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr>
+                                        {% for item in invoice.get_invoiceitem %}
+                                        <tr>
+                                        <td>{{forloop.counter}}</td>
+                                        <td>{{item.services_name}}</td>
+                                        <td>{{item.username}}</td>
+                                        <td>{{item.password}}</td>
+                                        <td>{{item.descripton}}</td>
+                                        <td>&#8377;{{item.fees}}</td>
+                                        <td>&#8377;{{item.services_charge}}</td>
+                                        <td>&#8377;{{item.sub_total}}</td>
+                                        </tr>
+                                        {% endfor %}
+                                      </tr>
+                                    </tbody>
+                                  </table>
                             </div>
                         </div>
                         <div class="tm_invoice_footer tm_border_top tm_mb15 tm_m0_md">
@@ -109,7 +147,17 @@
                                             <td
                                                 class="tm_width_3 tm_border_top_0 tm_bold tm_f16 tm_white_color tm_text_right">
                                                 &#8377;{{invoice.get_total}}</td>
+
+                                                
                                         </tr>
+                                        <tr class="tm_accent_bg">
+                                            <td class="tm_width_5 tm_border_top_0 tm_bold tm_f14 tm_white_color">Grand
+                                                Total in Words</td>
+                                            <td
+                                                class="tm_width_3 tm_border_top_0 tm_bold tm_f16 tm_white_color tm_text_right">
+                                                {{invoice.get_total_in_words}} rupees only</td>
+                                        </tr>
+                                        
                                     </tbody>
                                 </table>
                             </div>
